fix listing index header spacing

--- a/app/assets/stylesheets/listing-index-item.scss
+++ b/app/assets/stylesheets/listing-index-item.scss
@@ -11,6 +11,8 @@
 .listing-index-header {
   font-size: 20px;
   font-weight: bold;
+  margin-top: 5px;
+  margin-bottom: 15px;
 }
 
 
@@ -28,7 +30,7 @@
   height: 168px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  margin-top: 10px;
+  // margin-top: 10px;
   font-weight: 400px;
 }
 
